--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      <p>© <span id="year"></span> Open Indicator Lab</p>
+      <p>© <span id="year"></span> Open Indicator Lab - TradingView indicators, minus the sales pitch.</p>
     </div>
   </footer>
 
