--- a/indicators/adaptive-dual-ma-trend-ribbon.html
+++ b/indicators/adaptive-dual-ma-trend-ribbon.html
@@ -92,7 +92,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      <p>© <span id="year"></span> Adaptive Dual MA Trend Ribbon – Docs | Open Indicator Lab</p>
+      <p>© <span id="year"></span> Open Indicator Lab | Adaptive Dual MA Trend Ribbon — Docs</p>
     </div>
   </footer>
 
