--- a/indicators/blended-net-liquidity-correlation.html
+++ b/indicators/blended-net-liquidity-correlation.html
@@ -83,7 +83,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      <p>© <span id="year"></span> Blended Net Liquidity Correlation – Docs | Open Indicator Lab</p>
+      <p>© <span id="year"></span> Open Indicator Lab | Blended Net Liquidity Correlation — Docs</p>
     </div>
   </footer>
 
