--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Open Indicator Lab – Indicators</title>
+  <title>Open Indicator Lab – Free Indicators</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Lato -->
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles.css?v=1001" />
+  <link rel="stylesheet" href="styles.css?v=2025b" />
 </head>
 <body>
 
@@ -106,9 +106,7 @@
   </main>
 
   <footer class="site-footer">
-    <div class="container">
-      <p>© <span id="year"></span> Open Indicator Lab - TradingView indicators, minus the sales pitch.</p>
-    </div>
+    <p>© <span id="year"></span> Open Indicator Lab — TradingView indicators, minus the sales pitch.</p>
   </footer>
 
   <script>
