--- a/indicators/adaptive-dual-ma-trend-ribbon.html
+++ b/indicators/adaptive-dual-ma-trend-ribbon.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="../styles.css?v=1001" />
+  <link rel="stylesheet" href="../styles.css?v=2025b" />
 </head>
 <body>
 
@@ -30,9 +30,11 @@
   <main class="section section-doc">
     <div class="container">
 
-      <p class="section-intro">
-        <a href="../index.html#indicators" class="btn-secondary">← Back to all indicators</a>
-      </p>
+      <div class="indicator-nav">
+        <a href="blended-net-liquidity-correlation.html" class="btn-secondary">← Previous</a>
+        <a href="../index.html#indicators" class="btn-secondary">All indicators</a>
+        <a href="blended-net-liquidity-correlation.html" class="btn-secondary">Next →</a>
+      </div>
 
       <h1>Adaptive Dual MA Trend Ribbon Community “Larsson-Style” Presets</h1>
 
@@ -91,9 +93,7 @@
   </main>
 
   <footer class="site-footer">
-    <div class="container">
-      <p>© <span id="year"></span> Open Indicator Lab | Adaptive Dual MA Trend Ribbon — Docs</p>
-    </div>
+    <p>© <span id="year"></span> Open Indicator Lab | Adaptive Dual MA Trend Ribbon — Docs</p>
   </footer>
 
   <script>
