--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles.css?v=2025b" />
+  <link rel="stylesheet" href="styles.css?v=2025c" />
 </head>
 <body>
 
@@ -62,7 +62,7 @@
               <li>ATR filter</li>
             </ul>
             <div class="card-actions">
-              <a href="indicators/adaptive-dual-ma-trend-ribbon.html" class="btn-secondary">Learn more</a>
+              <a href="indicators/adaptive-dual-ma-trend-ribbon.html?v=2025c" class="btn-secondary">Learn more</a>
             </div>
           </article>
 
@@ -78,7 +78,7 @@
               <li>Correlation table</li>
             </ul>
             <div class="card-actions">
-              <a href="indicators/blended-net-liquidity-correlation.html" class="btn-secondary">Learn more</a>
+              <a href="indicators/blended-net-liquidity-correlation.html?v=2025c" class="btn-secondary">Learn more</a>
             </div>
           </article>
         </div>
