--- a/indicators/blended-net-liquidity-correlation.html
+++ b/indicators/blended-net-liquidity-correlation.html
@@ -10,17 +10,17 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="../styles.css?v=2025b" />
+  <link rel="stylesheet" href="../styles.css?v=2025c" />
 </head>
 <body>
 
   <header class="site-header">
     <div class="header-inner">
-      <div class="logo"><a href="../index.html">Open Indicator Lab</a></div>
+      <div class="logo"><a href="../index.html?v=2025c">Open Indicator Lab</a></div>
       <nav class="nav">
-        <a href="../index.html#hero">Home</a>
-        <a href="../index.html#indicators">Indicators</a>
-        <a href="../index.html#about">About</a>
+        <a href="../index.html?v=2025c#hero">Home</a>
+        <a href="../index.html?v=2025c#indicators">Indicators</a>
+        <a href="../index.html?v=2025c#about">About</a>
       </nav>
     </div>
   </header>
@@ -31,9 +31,9 @@
     <div class="container">
 
       <div class="indicator-nav">
-        <a href="adaptive-dual-ma-trend-ribbon.html" class="btn-secondary">← Previous</a>
-        <a href="../index.html#indicators" class="btn-secondary">All indicators</a>
-        <a href="adaptive-dual-ma-trend-ribbon.html" class="btn-secondary">Next →</a>
+        <a href="adaptive-dual-ma-trend-ribbon.html?v=2025c" class="btn-secondary">← Previous</a>
+        <a href="../index.html?v=2025c#indicators" class="btn-secondary">All indicators</a>
+        <a href="adaptive-dual-ma-trend-ribbon.html?v=2025c" class="btn-secondary">Next →</a>
       </div>
 
       <h1>Blended Net Liquidity Correlation</h1>
@@ -70,8 +70,9 @@
       <h2>Overview</h2>
 
       <p>
-        Many traders use liquidity-based models to understand broad macro conditions and their potential influence on price. While institutional-grade models often rely on proprietary inputs,
-        the community frequently studies public FRED series—such as WALCL, RRP, TGA, and BTFP—to construct transparent net-liquidity frameworks that approximate capital movement within the financial system.
+        Many traders use liquidity-based models to understand broad macro conditions and their potential influence on price. While institutional-grade models often rely on
+        proprietary inputs, the community frequently studies public FRED series—such as WALCL, RRP, TGA, and BTFP—to construct transparent net-liquidity frameworks that
+        approximate capital movement within the financial system.
       </p>
 
       <p>
