--- a/indicators/blended-net-liquidity-correlation.html
+++ b/indicators/blended-net-liquidity-correlation.html
@@ -10,17 +10,17 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="../styles.css?v=2025c" />
+  <link rel="stylesheet" href="../styles.css?v=restore1" />
 </head>
 <body>
 
   <header class="site-header">
     <div class="header-inner">
-      <div class="logo"><a href="../index.html?v=2025c">Open Indicator Lab</a></div>
+      <div class="logo"><a href="../index.html">Open Indicator Lab</a></div>
       <nav class="nav">
-        <a href="../index.html?v=2025c#hero">Home</a>
-        <a href="../index.html?v=2025c#indicators">Indicators</a>
-        <a href="../index.html?v=2025c#about">About</a>
+        <a href="../index.html#hero">Home</a>
+        <a href="../index.html#indicators">Indicators</a>
+        <a href="../index.html#about">About</a>
       </nav>
     </div>
   </header>
@@ -31,9 +31,9 @@
     <div class="container">
 
       <div class="indicator-nav">
-        <a href="adaptive-dual-ma-trend-ribbon.html?v=2025c" class="btn-secondary">← Previous</a>
-        <a href="../index.html?v=2025c#indicators" class="btn-secondary">All indicators</a>
-        <a href="adaptive-dual-ma-trend-ribbon.html?v=2025c" class="btn-secondary">Next →</a>
+        <a href="adaptive-dual-ma-trend-ribbon.html?v=restore1" class="btn-secondary">← Previous</a>
+        <a href="../index.html#indicators" class="btn-secondary">All indicators</a>
+        <a href="adaptive-dual-ma-trend-ribbon.html?v=restore1" class="btn-secondary">Next →</a>
       </div>
 
       <h1>Blended Net Liquidity Correlation</h1>
@@ -44,40 +44,41 @@
       </p>
 
       <div class="doc-actions">
-        <a href="https://www.tradingview.com/script/3u6UCRSH-Blended-Net-Liquidity-Correlation/"
-           target="_blank" rel="noopener" class="btn-primary">Open on TradingView</a>
+        <a class="btn-primary"
+           href="https://www.tradingview.com/script/3u6UCRSH-Blended-Net-Liquidity-Correlation/"
+           target="_blank" rel="noopener">
+          Open on TradingView
+        </a>
       </div>
 
       <h2>How Traders Recreate This Without the Indicator</h2>
 
       <p>
-        At its core, this tool combines publicly available macro liquidity series into a single framework. You can approximate similar views manually in TradingView without using this indicator.
+        Many traders use public FRED series (WALCL, RRP, TGA, BTFP, etc.) to build their own net liquidity approximations.
+        You can recreate similar concepts manually in TradingView using symbol math and overlays.
       </p>
 
-      <p>One common approach is to use TradingView’s symbol math feature:</p>
-
       <ol>
-        <li>Open the symbol search box.</li>
-        <li>Enter a math expression combining series (example style: WALCL − RRP − TGA). You can add/subtract/divide/multiply symbols directly.</li>
+        <li>Open the symbol search and enter a math expression combining series (example style: <strong>WALCL − RRP − TGA</strong>).</li>
         <li>Apply smoothing (like an SMA) to reduce noise.</li>
-        <li>Compare the result to price and test different offsets or timeframes.</li>
+        <li>Compare the resulting line to price and test different offsets/timeframes.</li>
+        <li>Optionally build multiple variants (with or without WALCL) and compare visually.</li>
       </ol>
 
       <p>
-        This indicator packages those steps into a cleaner workflow with component toggles, weighting controls, smoothing, and correlation windows—so you can explore the same concepts faster.
+        This indicator packages those steps into a clean workflow with component toggles, weighting controls, smoothing, and multi-window correlation so you can explore the same concepts faster.
       </p>
 
       <h2>Overview</h2>
 
       <p>
-        Many traders use liquidity-based models to understand broad macro conditions and their potential influence on price. While institutional-grade models often rely on
-        proprietary inputs, the community frequently studies public FRED series—such as WALCL, RRP, TGA, and BTFP—to construct transparent net-liquidity frameworks that
-        approximate capital movement within the financial system.
+        Many traders use liquidity-based models to understand broad macro conditions and their potential influence on price. While institutional-grade models often rely on proprietary inputs,
+        the community frequently studies public FRED series—such as WALCL, RRP, TGA, and BTFP—to construct transparent net-liquidity frameworks that approximate capital movement within the financial system.
       </p>
 
       <p>
         This script does not replicate or reverse-engineer any commercial macro indicator. Instead, it provides a flexible structure for exploring how different liquidity components interact,
-        and how those liquidity dynamics correlate with market price across various time windows.
+        and how those liquidity dynamics correlate with market price across various time windows. All data comes from standard FRED series, and all calculations are described at a high level for transparency.
       </p>
 
       <h2>What the Script Does</h2>
@@ -98,6 +99,26 @@
         <li>Automatically highlights the highest-correlation window.</li>
       </ul>
 
+      <h2>Why This Script Is Useful</h2>
+
+      <p>
+        Traditional liquidity charts often plot only one variable at a time. This open model adds clarity by combining multiple components into one framework and letting you quantify the relationship to price across time windows.
+      </p>
+
+      <h2>Important Notes</h2>
+
+      <ul>
+        <li>FRED data updates weekly and may revise historical values.</li>
+        <li>Correlation does not imply causation.</li>
+        <li>Liquidity models are approximations, not definitive forecasts.</li>
+      </ul>
+
+      <h2>Disclaimer</h2>
+
+      <p>
+        This tool is for educational and analytical purposes only. Always use proper risk management and validate ideas before trading live.
+      </p>
+
     </div>
   </main>
 
@@ -108,5 +129,6 @@
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
+
 </body>
 </html>
