--- a/indicators/blended-net-liquidity-correlation.html
+++ b/indicators/blended-net-liquidity-correlation.html
@@ -1,134 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Blended Net Liquidity Correlation – Docs | Open Indicator Lab</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta charset="UTF-8">
+<title>Blended Net Liquidity Correlation – Docs | Open Indicator Lab</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Lato -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="../styles.css?v=restore1" />
+<link rel="stylesheet" href="../styles.css?v=tv1">
 </head>
+
 <body>
 
-  <header class="site-header">
-    <div class="header-inner">
-      <div class="logo"><a href="../index.html">Open Indicator Lab</a></div>
-      <nav class="nav">
-        <a href="../index.html#hero">Home</a>
-        <a href="../index.html#indicators">Indicators</a>
-        <a href="../index.html#about">About</a>
-      </nav>
-    </div>
-  </header>
+<header class="site-header">
+  <div class="header-inner">
+    <div class="logo"><a href="../index.html">Open Indicator Lab</a></div>
+    <nav class="nav">
+      <a href="../index.html#hero">Home</a>
+      <a href="../index.html#indicators">Indicators</a>
+      <a href="../index.html#about">About</a>
+    </nav>
+  </div>
+</header>
 
-  <div class="top-shelf" aria-hidden="true"></div>
+<div class="top-shelf"></div>
 
-  <main class="section section-doc">
-    <div class="container">
+<main class="section">
+<div class="container">
 
-      <div class="indicator-nav">
-        <a href="adaptive-dual-ma-trend-ribbon.html?v=restore1" class="btn-secondary">← Previous</a>
-        <a href="../index.html#indicators" class="btn-secondary">All indicators</a>
-        <a href="adaptive-dual-ma-trend-ribbon.html?v=restore1" class="btn-secondary">Next →</a>
-      </div>
+<div class="indicator-nav">
+  <a href="adaptive-dual-ma-trend-ribbon.html?v=tv1" class="btn-secondary">← Previous</a>
+  <a href="../index.html#indicators" class="btn-secondary">All indicators</a>
+  <a href="adaptive-dual-ma-trend-ribbon.html?v=tv1" class="btn-secondary">Next →</a>
+</div>
 
-      <h1>Blended Net Liquidity Correlation</h1>
+<h1>Blended Net Liquidity Correlation</h1>
 
-      <p class="section-intro">
-        A macro tool that builds a blended net-liquidity model from FRED data and measures how strongly that liquidity has moved with price across multiple time windows.
-        The indicator is <strong>free to use</strong> on TradingView; the script is protected.
-      </p>
+<p class="section-intro">
+Macro liquidity model combining public FRED series with multi-window price correlation.
+</p>
 
-      <div class="doc-actions">
-        <a class="btn-primary"
-           href="https://www.tradingview.com/script/3u6UCRSH-Blended-Net-Liquidity-Correlation/"
-           target="_blank" rel="noopener">
-          Open on TradingView
-        </a>
-      </div>
+<div class="doc-actions">
+  <a class="btn-primary" target="_blank"
+     href="https://www.tradingview.com/script/3u6UCRSH-Blended-Net-Liquidity-Correlation/">
+    Open on TradingView
+  </a>
+</div>
 
-      <h2>How Traders Recreate This Without the Indicator</h2>
+<div class="tv-embed">
+<iframe
+src="https://www.tradingview.com/widgetembed/?symbol=BITSTAMP:BTCUSD&interval=W&theme=light&style=1&locale=en&hide_side_toolbar=true&studies=%5B%22USER%3A3u6UCRSH%22%5D"
+allowfullscreen>
+</iframe>
+</div>
 
-      <p>
-        Many traders use public FRED series (WALCL, RRP, TGA, BTFP, etc.) to build their own net liquidity approximations.
-        You can recreate similar concepts manually in TradingView using symbol math and overlays.
-      </p>
+<h2>How Traders Recreate This Without the Indicator</h2>
 
-      <ol>
-        <li>Open the symbol search and enter a math expression combining series (example style: <strong>WALCL − RRP − TGA</strong>).</li>
-        <li>Apply smoothing (like an SMA) to reduce noise.</li>
-        <li>Compare the resulting line to price and test different offsets/timeframes.</li>
-        <li>Optionally build multiple variants (with or without WALCL) and compare visually.</li>
-      </ol>
+<p>
+Use TradingView symbol math to combine WALCL, RRP, and TGA series, then smooth and compare against price.
+</p>
 
-      <p>
-        This indicator packages those steps into a clean workflow with component toggles, weighting controls, smoothing, and multi-window correlation so you can explore the same concepts faster.
-      </p>
+<h2>Disclaimer</h2>
 
-      <h2>Overview</h2>
+<p>
+Educational use only. No financial advice.
+</p>
 
-      <p>
-        Many traders use liquidity-based models to understand broad macro conditions and their potential influence on price. While institutional-grade models often rely on proprietary inputs,
-        the community frequently studies public FRED series—such as WALCL, RRP, TGA, and BTFP—to construct transparent net-liquidity frameworks that approximate capital movement within the financial system.
-      </p>
+</div>
+</main>
 
-      <p>
-        This script does not replicate or reverse-engineer any commercial macro indicator. Instead, it provides a flexible structure for exploring how different liquidity components interact,
-        and how those liquidity dynamics correlate with market price across various time windows. All data comes from standard FRED series, and all calculations are described at a high level for transparency.
-      </p>
+<footer class="site-footer">
+<p>© <span id="year"></span> Open Indicator Lab | Blended Net Liquidity Correlation — Docs</p>
+</footer>
 
-      <h2>What the Script Does</h2>
-
-      <h3>1. Builds a customizable blended net-liquidity model</h3>
-      <ul>
-        <li>Includes WALCL, RRP, TGA, BTFP, ΔTOTLL, and ΔM2.</li>
-        <li>Allows turning each component on/off.</li>
-        <li>Provides adjustable weighting for WALCL vs. non-WALCL models.</li>
-        <li>Supports optional SMA smoothing of the liquidity series.</li>
-        <li>Supports time-offsetting liquidity to study lagging effects.</li>
-      </ul>
-
-      <h3>2. Runs multi-period price correlations</h3>
-      <ul>
-        <li>30D, 60D, 90D, 180D, 1Y, 1.5Y, 2Y, and a custom-length window.</li>
-        <li>Displays all correlations in a compact table.</li>
-        <li>Automatically highlights the highest-correlation window.</li>
-      </ul>
-
-      <h2>Why This Script Is Useful</h2>
-
-      <p>
-        Traditional liquidity charts often plot only one variable at a time. This open model adds clarity by combining multiple components into one framework and letting you quantify the relationship to price across time windows.
-      </p>
-
-      <h2>Important Notes</h2>
-
-      <ul>
-        <li>FRED data updates weekly and may revise historical values.</li>
-        <li>Correlation does not imply causation.</li>
-        <li>Liquidity models are approximations, not definitive forecasts.</li>
-      </ul>
-
-      <h2>Disclaimer</h2>
-
-      <p>
-        This tool is for educational and analytical purposes only. Always use proper risk management and validate ideas before trading live.
-      </p>
-
-    </div>
-  </main>
-
-  <footer class="site-footer">
-    <p>© <span id="year"></span> Open Indicator Lab | Blended Net Liquidity Correlation — Docs</p>
-  </footer>
-
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
+<script>
+document.getElementById("year").textContent = new Date().getFullYear();
+</script>
 
 </body>
 </html>
