--- a/indicators/blended-net-liquidity-correlation.html
+++ b/indicators/blended-net-liquidity-correlation.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="../styles.css?v=tv1">
+<link rel="stylesheet" href="../styles.css?v=tvfinal">
 </head>
 
 <body>
@@ -31,9 +31,9 @@
 <div class="container">
 
 <div class="indicator-nav">
-  <a href="adaptive-dual-ma-trend-ribbon.html?v=tv1" class="btn-secondary">← Previous</a>
+  <a href="adaptive-dual-ma-trend-ribbon.html?v=tvfinal" class="btn-secondary">← Previous</a>
   <a href="../index.html#indicators" class="btn-secondary">All indicators</a>
-  <a href="adaptive-dual-ma-trend-ribbon.html?v=tv1" class="btn-secondary">Next →</a>
+  <a href="adaptive-dual-ma-trend-ribbon.html?v=tvfinal" class="btn-secondary">Next →</a>
 </div>
 
 <h1>Blended Net Liquidity Correlation</h1>
@@ -50,10 +50,11 @@ Macro liquidity model combining public FRED series with multi-window price corre
 </div>
 
 <div class="tv-embed">
-<iframe
-src="https://www.tradingview.com/widgetembed/?symbol=BITSTAMP:BTCUSD&interval=W&theme=light&style=1&locale=en&hide_side_toolbar=true&studies=%5B%22USER%3A3u6UCRSH%22%5D"
-allowfullscreen>
-</iframe>
+  <iframe
+    loading="lazy"
+    allowfullscreen
+    src="https://www.tradingview.com/widgetembed/?symbol=BITSTAMP%3ABTCUSD&interval=W&theme=light&style=1&locale=en&hide_side_toolbar=true&enable_publishing=false&allow_symbol_change=true&studies=%5B%22USER%3A3u6UCRSH%22%5D">
+  </iframe>
 </div>
 
 <h2>How Traders Recreate This Without the Indicator</h2>
