--- a/indicators/adaptive-dual-ma-trend-ribbon.html
+++ b/indicators/adaptive-dual-ma-trend-ribbon.html
@@ -1,91 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Adaptive Dual MA Trend Ribbon – Docs | Open Indicator Lab</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <title>Adaptive Dual MA Trend Ribbon – Docs | Open Indicator Lab</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="../styles.css?v=tvfinal">
+  <link rel="stylesheet" href="../styles.css?v=shots1" />
 </head>
-
 <body>
 
-<header class="site-header">
-  <div class="header-inner">
-    <div class="logo"><a href="../index.html">Open Indicator Lab</a></div>
-    <nav class="nav">
-      <a href="../index.html#hero">Home</a>
-      <a href="../index.html#indicators">Indicators</a>
-      <a href="../index.html#about">About</a>
-    </nav>
-  </div>
-</header>
+  <header class="site-header">
+    <div class="header-inner">
+      <div class="logo"><a href="../index.html">Open Indicator Lab</a></div>
+      <nav class="nav">
+        <a href="../index.html#hero">Home</a>
+        <a href="../index.html#indicators">Indicators</a>
+        <a href="../index.html#about">About</a>
+      </nav>
+    </div>
+  </header>
 
-<div class="top-shelf"></div>
+  <div class="top-shelf"></div>
 
-<main class="section">
-<div class="container">
+  <main class="section section-doc">
+    <div class="container">
 
-<div class="indicator-nav">
-  <a href="blended-net-liquidity-correlation.html?v=tvfinal" class="btn-secondary">← Previous</a>
-  <a href="../index.html#indicators" class="btn-secondary">All indicators</a>
-  <a href="blended-net-liquidity-correlation.html?v=tvfinal" class="btn-secondary">Next →</a>
-</div>
+      <div class="indicator-nav">
+        <a href="blended-net-liquidity-correlation.html?v=shots1" class="btn-secondary">← Previous</a>
+        <a href="../index.html#indicators" class="btn-secondary">All indicators</a>
+        <a href="blended-net-liquidity-correlation.html?v=shots1" class="btn-secondary">Next →</a>
+      </div>
 
-<h1>Adaptive Dual MA Trend Ribbon (Larsson-Style)</h1>
+      <h1>Adaptive Dual MA Trend Ribbon Community “Larsson-Style” Presets</h1>
 
-<p class="section-intro">
-A dual-moving-average trend ribbon for TradingView using SMMA/EMA/SMA/WMA pairs with optional ATR neutral zones.
-</p>
+      <p class="section-intro">
+        Many traders enjoy experimenting with dual-moving-average “trend ribbon” structures that resemble the visual style of popular tools such as the Larsson Line.
+        This indicator provides a clean, configurable ribbon implementation for TradingView. The indicator is free to use; the script is protected.
+      </p>
 
-<div class="doc-actions">
-  <a class="btn-primary" target="_blank"
-     href="https://www.tradingview.com/script/gpEGdOcF-Adaptive-Dual-MA-Trend-Ribbon-Community-Larsson-Style-Presets/">
-    Open on TradingView
-  </a>
-</div>
+      <div class="doc-actions">
+        <a class="btn-primary" target="_blank" rel="noopener"
+           href="https://www.tradingview.com/script/gpEGdOcF-Adaptive-Dual-MA-Trend-Ribbon-Community-Larsson-Style-Presets/">
+          Open on TradingView
+        </a>
+      </div>
 
-<div class="tv-embed">
-  <iframe
-    loading="lazy"
-    allowfullscreen
-    src="https://www.tradingview.com/widgetembed/?symbol=BITSTAMP%3ABTCUSD&interval=D&theme=light&style=1&locale=en&hide_side_toolbar=true&enable_publishing=false&allow_symbol_change=true&studies=%5B%22USER%3AgpEGdOcF%22%5D">
-  </iframe>
-</div>
+      <a class="chart-shot"
+         href="https://www.tradingview.com/script/gpEGdOcF-Adaptive-Dual-MA-Trend-Ribbon-Community-Larsson-Style-Presets/"
+         target="_blank" rel="noopener">
+        <img src="../assets/adaptive-dual-ma.png" alt="Adaptive Dual MA Trend Ribbon example chart">
+      </a>
+      <p class="chart-shot-caption">Click the chart to open the indicator on TradingView.</p>
 
-<h2>How Traders Recreate This Without the Indicator</h2>
+      <h2>How Traders Recreate This Without the Indicator</h2>
 
-<p>
-Plot two smoothed moving averages: one with length 15 and one with length 29.
-When the faster MA is above the slower MA, bias is bullish; below, bearish.
-</p>
+      <p>
+        At its core, the different “Larsson-style” trend ribbons are based on a very simple idea: plotting two smoothed moving averages and observing how they interact.
+      </p>
 
-<h2>Overview</h2>
+      <ol>
+        <li>Add a <strong>Smoothed Moving Average (SMMA)</strong> to your chart.</li>
+        <li>Set its length to <strong>15</strong> and leave the remaining inputs at defaults.</li>
+        <li>Add a second SMMA with length set to <strong>29</strong>.</li>
+        <li>If the 15 SMMA is above the 29 SMMA, bias is bullish; if below, bias is bearish.</li>
+      </ol>
 
-<p>
-This indicator packages a commonly used community setup into a clean ribbon with optional filters.
-</p>
+      <p>
+        Because moving averages lag, this tends to work best on <strong>daily and higher</strong> timeframes and during clear trends. It performs poorly in choppy ranges,
+        so many traders combine it with structure, volatility filters, and other confirmation.
+      </p>
 
-<h2>Disclaimer</h2>
+      <h2>What the Script Does</h2>
 
-<p>
-Educational use only. No financial advice.
-</p>
+      <ul>
+        <li>Plots fast/slow moving averages using <strong>SMMA (RMA)</strong>, <strong>EMA</strong>, <strong>SMA</strong>, or <strong>WMA</strong>.</li>
+        <li>Colors the ribbon:
+          <ul>
+            <li><strong>Bullish</strong> when Fast MA &gt; Slow MA</li>
+            <li><strong>Bearish</strong> when Fast MA &lt; Slow MA</li>
+            <li><strong>Neutral</strong> when the difference is small (optional ATR filter)</li>
+          </ul>
+        </li>
+        <li>Optional ATR-based neutral zone filtering to reduce chop.</li>
+        <li>Optional bar coloring by trend state.</li>
+        <li>Works on any market/timeframe.</li>
+      </ul>
 
-</div>
-</main>
+      <h2>Popular Community Presets</h2>
+      <ul>
+        <li><strong>SMMA 15 / 29</strong> (classic smoother structure)</li>
+        <li><strong>EMA 30 / 60</strong> (more reactive)</li>
+      </ul>
 
-<footer class="site-footer">
-<p>© <span id="year"></span> Open Indicator Lab | Adaptive Dual MA Trend Ribbon — Docs</p>
-</footer>
+      <h2>Disclaimer</h2>
+      <p>
+        Educational use only. This is not financial advice.
+      </p>
 
-<script>
-document.getElementById("year").textContent = new Date().getFullYear();
-</script>
+    </div>
+  </main>
+
+  <footer class="site-footer">
+    <p>© <span id="year"></span> Open Indicator Lab | Adaptive Dual MA Trend Ribbon — Docs</p>
+  </footer>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 
 </body>
 </html>
