--- a/indicators/adaptive-dual-ma-trend-ribbon.html
+++ b/indicators/adaptive-dual-ma-trend-ribbon.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="../styles.css?v=shots1" />
+  <link rel="stylesheet" href="../styles.css?v=textrestore1" />
 </head>
 <body>
 
@@ -30,16 +30,16 @@
     <div class="container">
 
       <div class="indicator-nav">
-        <a href="blended-net-liquidity-correlation.html?v=shots1" class="btn-secondary">← Previous</a>
+        <a href="blended-net-liquidity-correlation.html?v=textrestore1" class="btn-secondary">← Previous</a>
         <a href="../index.html#indicators" class="btn-secondary">All indicators</a>
-        <a href="blended-net-liquidity-correlation.html?v=shots1" class="btn-secondary">Next →</a>
+        <a href="blended-net-liquidity-correlation.html?v=textrestore1" class="btn-secondary">Next →</a>
       </div>
 
       <h1>Adaptive Dual MA Trend Ribbon Community “Larsson-Style” Presets</h1>
 
       <p class="section-intro">
         Many traders enjoy experimenting with dual-moving-average “trend ribbon” structures that resemble the visual style of popular tools such as the Larsson Line.
-        This indicator provides a clean, configurable ribbon implementation for TradingView. The indicator is free to use; the script is protected.
+        This indicator provides a flexible, well-documented version of that style for TradingView. The indicator is free to use; the script is protected.
       </p>
 
       <div class="doc-actions">
@@ -49,6 +49,7 @@
         </a>
       </div>
 
+      <!-- Screenshot -->
       <a class="chart-shot"
          href="https://www.tradingview.com/script/gpEGdOcF-Adaptive-Dual-MA-Trend-Ribbon-Community-Larsson-Style-Presets/"
          target="_blank" rel="noopener">
@@ -56,49 +57,123 @@
       </a>
       <p class="chart-shot-caption">Click the chart to open the indicator on TradingView.</p>
 
+      <!-- Your educational “recreate it manually” section -->
       <h2>How Traders Recreate This Without the Indicator</h2>
 
       <p>
-        At its core, the different “Larsson-style” trend ribbons are based on a very simple idea: plotting two smoothed moving averages and observing how they interact.
+        At its core, the different “Larsson-style” trend ribbons are based on a very simple idea: plotting two smoothed moving averages and observing how they interact over time.
+      </p>
+
+      <p>
+        If you want to recreate a similar structure manually in TradingView—without using this indicator—you can do the following:
       </p>
 
       <ol>
         <li>Add a <strong>Smoothed Moving Average (SMMA)</strong> to your chart.</li>
-        <li>Set its length to <strong>15</strong> and leave the remaining inputs at defaults.</li>
-        <li>Add a second SMMA with length set to <strong>29</strong>.</li>
-        <li>If the 15 SMMA is above the 29 SMMA, bias is bullish; if below, bias is bearish.</li>
+        <li>Set its length to <strong>15</strong> and leave the remaining inputs at their defaults.</li>
+        <li>Add a second Smoothed Moving Average with the length set to <strong>29</strong>.</li>
+        <li>When the faster SMMA (15) moves above the slower SMMA (29), the trend bias is bullish.</li>
+        <li>When the faster SMMA (15) moves below the slower SMMA (29), the trend bias is bearish.</li>
       </ol>
 
       <p>
-        Because moving averages lag, this tends to work best on <strong>daily and higher</strong> timeframes and during clear trends. It performs poorly in choppy ranges,
-        so many traders combine it with structure, volatility filters, and other confirmation.
+        Because moving averages are lagging by nature, this approach tends to work best on <strong>higher timeframes (daily and above)</strong>
+        and during clear directional trends. It performs poorly in sideways or choppy markets, which is why many traders combine it with other indicators
+        and technical analysis for confluence.
+      </p>
+
+      <p>
+        You don’t need to use 15 and 29 — feel free to experiment with your own settings. This indicator is provided as a free tool for exploration and convenience.
+      </p>
+
+      <!-- Your original long-form description -->
+      <h2>Overview</h2>
+
+      <p>
+        Many traders enjoy experimenting with dual-moving-average “trend ribbon” structures that resemble the visual style of popular tools such as the Larsson Line.
+        While the internal logic of closed-source indicators is not publicly available, the trading community often explores MA combinations like SMMA 15/29 or EMA 30/60
+        with ATR filters to study trend transitions and visualize momentum shifts.
+      </p>
+
+      <p>
+        This script does not replicate, reverse-engineer, or replace any closed-source indicator. Instead, it provides a flexible framework that lets traders build their own
+        trend-ribbon configuration inspired by the visual concept of similar tools while maintaining complete transparency around inputs and behavior.
+      </p>
+
+      <p>
+        Because all calculations use standard, well-known moving average methods, traders who enjoy experimenting with community-discussed MA presets can do so freely,
+        without relying on proprietary tools. (The indicator is free to use; the script is protected.)
       </p>
 
       <h2>What the Script Does</h2>
 
       <ul>
-        <li>Plots fast/slow moving averages using <strong>SMMA (RMA)</strong>, <strong>EMA</strong>, <strong>SMA</strong>, or <strong>WMA</strong>.</li>
-        <li>Colors the ribbon:
+        <li>Plots Fast and Slow moving averages using the method of your choice: <strong>SMMA (RMA), EMA, SMA, or WMA</strong>.</li>
+        <li>Colors the ribbon to show directional bias:
           <ul>
             <li><strong>Bullish</strong> when Fast MA &gt; Slow MA</li>
             <li><strong>Bearish</strong> when Fast MA &lt; Slow MA</li>
             <li><strong>Neutral</strong> when the difference is small (optional ATR filter)</li>
           </ul>
         </li>
-        <li>Optional ATR-based neutral zone filtering to reduce chop.</li>
-        <li>Optional bar coloring by trend state.</li>
-        <li>Works on any market/timeframe.</li>
+        <li>Supports ATR-based neutral zone filtering.</li>
+        <li>Supports optional bar coloring tied to trend state.</li>
+        <li>Works on all markets and timeframes.</li>
+        <li>Free to use on TradingView (script protected).</li>
       </ul>
 
-      <h2>Popular Community Presets</h2>
+      <h2>Why This Script Is Useful</h2>
+
+      <p>
+        Traditional moving averages identify trend direction but lack context during uncertain or low-momentum conditions. This script adds value by:
+      </p>
+
+      <ol>
+        <li>Allowing multiple smoothing techniques (SMMA/EMA/SMA/WMA)</li>
+        <li>Highlighting clearer trend transitions</li>
+        <li>Identifying low-confidence periods using ATR</li>
+        <li>Providing a visually intuitive ribbon instead of single-line signals</li>
+      </ol>
+
+      <p>
+        Suitable for swing traders, trend followers, breakout traders, and anyone who wants cleaner structure-based contextualization.
+      </p>
+
+      <h2>Popular Community MA Combinations</h2>
+
       <ul>
-        <li><strong>SMMA 15 / 29</strong> (classic smoother structure)</li>
-        <li><strong>EMA 30 / 60</strong> (more reactive)</li>
+        <li><strong>SMMA 15/29</strong> → smoother structural trend flow</li>
+        <li><strong>EMA 30/60</strong> → more responsive momentum shifts</li>
+        <li><strong>EMA 10/21</strong> → intraday rhythm</li>
+        <li><strong>EMA 50/100</strong> → higher-timeframe structure</li>
+      </ul>
+
+      <p>
+        These examples are commonly used by the community — but this script does not recreate or imitate any closed-source or commercial indicator.
+      </p>
+
+      <h2>How to Use</h2>
+
+      <ol>
+        <li>Choose your preferred MA type</li>
+        <li>Adjust Fast/Slow lengths to match your timeframe</li>
+        <li>Enable ATR Neutral Zone to reduce false flips</li>
+        <li>Optionally enable bar coloring</li>
+        <li>Combine with structure, volume, or price action for decision-making</li>
+      </ol>
+
+      <h2>Important Notes</h2>
+
+      <ul>
+        <li>This indicator is free to use on TradingView; the script is protected.</li>
+        <li>It does not reproduce, imitate, or reverse-engineer any closed-source logic.</li>
+        <li>All computations rely on standard MA/ATR concepts.</li>
       </ul>
 
       <h2>Disclaimer</h2>
+
       <p>
-        Educational use only. This is not financial advice.
+        This tool is for educational and analytical purposes only. Always test parameters and use proper risk management before applying to live trading.
       </p>
 
     </div>
