--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <title>Open Indicator Lab – Free Indicators</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Lato -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles.css?v=2025c" />
+  <link rel="stylesheet" href="styles.css?v=layoutfix1" />
 </head>
 <body>
 
@@ -62,7 +61,7 @@
               <li>ATR filter</li>
             </ul>
             <div class="card-actions">
-              <a href="indicators/adaptive-dual-ma-trend-ribbon.html?v=2025c" class="btn-secondary">Learn more</a>
+              <a href="indicators/adaptive-dual-ma-trend-ribbon.html" class="btn-secondary">Learn more</a>
             </div>
           </article>
 
@@ -78,7 +77,7 @@
               <li>Correlation table</li>
             </ul>
             <div class="card-actions">
-              <a href="indicators/blended-net-liquidity-correlation.html?v=2025c" class="btn-secondary">Learn more</a>
+              <a href="indicators/blended-net-liquidity-correlation.html" class="btn-secondary">Learn more</a>
             </div>
           </article>
         </div>
